--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,12 @@
             <version>3.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.2</version>
+        </dependency>
 
     </dependencies>
 
