--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.nikita.botter.BotMoneyApplication</mainClass>
+                                    <mainClass>com.capitalist.telegramBot.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
